--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ function changeCookie() {
     <div id="footer">
         <div id="center" align="center">
             Request ID: request_id<br/>
-            &copy; 2022 ,AnushkaSandaruwan
+            &copy; 2022 , @AnushkaSandaruwan
         </div>
     </div>
 </body>
